--- a/estilos.css
+++ b/estilos.css
@@ -9,7 +9,7 @@ body {
 h1 {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  color: #0078b6;
+  color: #5ec9ff;
   text-align: center;
   margin-bottom: 40px;
 }
